<resources>
    <string name="app_name">Laboratorio02</string>
    <string name="main_titulo">Menu de opciones</string>
    <string name="category">Seleccionar una categoria</string>
    <string name="productList">Lista de productos</string>
    <string name="quantity">Cantidad a pedir</string>
    <string name="productData">Datos del pedido</string>
    <string name="email">Correo electrónico</string>
    <string name="me">Modo de entrega</string>
    <string name="shipingAdress">Dirección de envío</string>
    <string name="hour">Hora solicitada (HH:MM)</string>
    <string name="rl">Retira en local</string>
    <string name="dp">Datos del pedido</string>
    <string name="ed">Enviar a domicilio</string>
    <string name="agPd">Agregar producto</string>
    <string name="quitarPedido">Quitar producto</string>
    <string name="hacerPedido">Hacer pedido</string>
    <string name="back">Volver</string>
    <string name="totalPedido">Total de pedido: $</string>
    <string name="pedidoRealizados">Pedidos realizados</string>
    <string name="contacto">Contacto:</string>
    <string name="fechaEntrega">Fecha de entrega:</string>
    <string name="items">Items: </string>
    <string name="estado">Estado: </string>
    <string name="cancelar">Cancelar</string>
    <string name="ingreseemail">Ingrese su e-mail...</string>
    <string name="ingresedireccion">Ingrese su dirección...</string>
    <string name="ingresehora">hh:mm</string>
    <string name="nuevo">Nuevo</string>
    <string name="menu">Menu</string>
    <string name="verDetalle">Ver Detalle</string>
    <string name="canal_estado_nombre">Soy un nombre!</string>
    <string name="canal_estado_descripcion">Soy una descripcion!</string>
    <string name="retirarPorDefecto">Retirar por defecto</string>
    <string name="retirarPorDefecto2">El pedido es para retirar</string>
    <string name="usarPorDefecto">Se usará por defecto</string>
    <string name="configuracion">Configuración</string>
    <string name="categorias">Categorias</string>
    <string name="gestionarProd">Gestionar productos</string>


</resources>
